11-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: word-cloud-generator-service
spec:
  selector:
    app: word-cloud-generator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
