11-kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: word-cloud-generator-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /wcg
            pathType: Prefix
            backend:
              service:
                name: word-cloud-generator-service
                port:
                  number: 80
